[package]
name = "ip_talkie"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.11"
clap = { version = "4.0", features = ["derive"] }
ctrlc = "3.2"

[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "processthreadsapi"] }

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-sys = "0.2"
